Working on Navbar

--- a/about.html
+++ b/about.html
@@ -33,6 +33,30 @@
     <title>About | Societal.Ventures</title>
 </head>
 <body>
+
+    <!--Nav Bar-->
+    <nav class="navbar bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img style="margin-left: 10%;"src="Societal_Ventures (1).jpg" alt="Societal Ventures" width="15%" height="15%">
+            <a style="text-decoration:none; margin-left:23%; font-size:110%;">HOME</a>
+            <a style="text-decoration:none; margin-left:1%;font-size:110%;">ABOUT</a>
+            <a style="text-decoration:none; margin-left:1%; font-size:110%;">PUBLICATIONS</a>
+            <a style="text-decoration:none;  margin-left:1%; font-size:110%;">PROJECTS</a>
+            <a style="text-decoration:none;  margin-left:1%; font-size:110%;">GET INVOLVED</a>
+            <img style="margin-left:1.5%;" src="Twitter.jpg" alt="Societal Ventures" >
+            <img style="margin-left:1%;" src="LinkedIn.jpg" alt="Societal Ventures">
+
+
+
+
+
+        </a>
+          
+        </div>
+      </nav>
+
+
     <!--About Us Title-->
     <div style="background-color: rgb(233,233,233); margin-left: 10%; margin-right:10%; margin-bottom:1px;">
     <h1 class="title" style="margin-top:5%; font-family: 'Arimo', sans-serif;
